[gd_scene load_steps=29 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://gfx/heart.png" type="Texture" id=2]
[ext_resource path="res://audio/fxs/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/fxs/take_arrow.wav" type="AudioStream" id=4]
[ext_resource path="res://gfx/arrow_panel.png" type="Texture" id=5]
[ext_resource path="res://gfx/pink_light_panel.png" type="Texture" id=6]
[ext_resource path="res://audio/fxs/explode.wav" type="AudioStream" id=7]
[ext_resource path="res://gfx/Clean-Retro-Lines-Player.png" type="Texture" id=8]
[ext_resource path="res://audio/fxs/hit.wav" type="AudioStream" id=9]
[ext_resource path="res://gfx/grey_light_panel.png" type="Texture" id=10]
[ext_resource path="res://audio/fxs/pu.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/fxs/unlock.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/fxs/bounce.wav" type="AudioStream" id=13]
[ext_resource path="res://audio/fxs/konami.wav" type="AudioStream" id=14]
[ext_resource path="res://GameTimeText.gd" type="Script" id=15]
[ext_resource path="res://gfx/game_cleared_ani.png" type="Texture" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.91142
height = 5.75809

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 494, 99 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 16 )
region = Rect2( 494, 0, 494, 99 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 16 )
region = Rect2( 988, 0, 494, 99 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 16 )
region = Rect2( 1482, 0, 494, 99 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 16 )
region = Rect2( 1976, 0, 494, 99 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 7, 7, 7, 8, 8, 8, 8 ]
}

[sub_resource type="Animation" id=9]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}

[sub_resource type="Animation" id=11]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=12]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 91, 250 )
collision_layer = 2147483650
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )
vframes = 5
hframes = 7
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.982147, 1.12247 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -3 )
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
offset_v = -1.0

[node name="Control" type="CanvasLayer" parent="Camera2D"]

[node name="Heart1" type="Sprite" parent="Camera2D/Control"]
position = Vector2( 736, 16 )
texture = ExtResource( 2 )

[node name="Heart2" type="Sprite" parent="Camera2D/Control"]
position = Vector2( 747.319, 16 )
texture = ExtResource( 2 )

[node name="Heart3" type="Sprite" parent="Camera2D/Control"]
position = Vector2( 758.069, 16 )
texture = ExtResource( 2 )

[node name="Heart4" type="Sprite" parent="Camera2D/Control"]
position = Vector2( 769.069, 16 )
texture = ExtResource( 2 )

[node name="Heart5" type="Sprite" parent="Camera2D/Control"]
position = Vector2( 779.819, 16 )
texture = ExtResource( 2 )

[node name="grey1" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 24.6945, 22.0249 )
texture = ExtResource( 10 )

[node name="grey2" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 50.0565, 22.0249 )
texture = ExtResource( 10 )

[node name="grey3" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 74.7789, 22.0249 )
texture = ExtResource( 10 )

[node name="grey4" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 99.8355, 22.0249 )
texture = ExtResource( 10 )

[node name="grey5" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 124.669, 22.0249 )
texture = ExtResource( 10 )

[node name="grey6" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 148.946, 22.0249 )
texture = ExtResource( 10 )

[node name="grey7" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 173.891, 22.0249 )
texture = ExtResource( 10 )

[node name="grey8" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 198.948, 22.0249 )
texture = ExtResource( 10 )

[node name="grey9" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 224.004, 22.0249 )
texture = ExtResource( 10 )

[node name="grey0" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 249.172, 22.0249 )
texture = ExtResource( 10 )

[node name="pink1" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 25.3906, 21.4952 )
texture = ExtResource( 6 )

[node name="pink2" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 50.3906, 21.4952 )
texture = ExtResource( 6 )

[node name="pink3" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 74.7514, 21.4952 )
texture = ExtResource( 6 )

[node name="pink4" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 100.446, 21.4952 )
texture = ExtResource( 6 )

[node name="pink5" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 125.142, 21.4952 )
texture = ExtResource( 6 )

[node name="pink6" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 148.835, 21.4952 )
texture = ExtResource( 6 )

[node name="pink7" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 173.863, 21.4952 )
texture = ExtResource( 6 )

[node name="pink8" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 199.225, 21.4952 )
texture = ExtResource( 6 )

[node name="pink9" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 224.253, 21.4952 )
texture = ExtResource( 6 )

[node name="pink0" type="Sprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 249.281, 21.4952 )
texture = ExtResource( 6 )

[node name="arrowpanel" type="Sprite" parent="Camera2D/Control"]
position = Vector2( 136, 22.475 )
texture = ExtResource( 5 )

[node name="TextMessageSnake" type="RichTextLabel" parent="Camera2D/Control"]
visible = false
margin_left = 13.1367
margin_top = 37.1167
margin_right = 213.137
margin_bottom = 77.1167
custom_colors/default_color = Color( 0.705882, 0.705882, 0.705882, 1 )
text = "cheat_snake_lover: 1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextMessageWater" type="RichTextLabel" parent="Camera2D/Control"]
visible = false
margin_left = 11.6384
margin_top = 55.8455
margin_right = 211.639
margin_bottom = 95.8455
custom_colors/default_color = Color( 0.705882, 0.705882, 0.705882, 1 )
text = "cheat_walk_on_water: 1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextMessageShot" type="RichTextLabel" parent="Camera2D/Control"]
visible = false
margin_left = 11.6384
margin_top = 75.6111
margin_right = 211.639
margin_bottom = 115.611
custom_colors/default_color = Color( 0.705882, 0.705882, 0.705882, 1 )
text = "cheat_OP_weapon: 1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextMessageGodMode" type="RichTextLabel" parent="Camera2D/Control"]
visible = false
margin_left = 11.6384
margin_top = 95.0093
margin_right = 211.639
margin_bottom = 135.009
custom_colors/default_color = Color( 0.705882, 0.705882, 0.705882, 1 )
text = "cheat_god_mode: 1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimer" type="Timer" parent="Camera2D/Control"]
autostart = true

[node name="GameTimeText" type="RichTextLabel" parent="Camera2D/Control"]
margin_left = 397.017
margin_top = 9.85359
margin_right = 477.017
margin_bottom = 49.8536
text = "Time: 0:00"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="RichTextLabel" parent="Camera2D/Control"]
margin_left = 257.417
margin_top = 575.193
margin_right = 557.417
margin_bottom = 591.193
custom_colors/default_color = Color( 0.556863, 0.556863, 0.556863, 1 )
text = "[ S ] left   [ F ] right   [ SPACE ] jump   [ K ] shoot"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameCleared" type="AnimatedSprite" parent="Camera2D/Control"]
visible = false
position = Vector2( 405.879, 199.404 )
frames = SubResource( 7 )
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 8 )
anims/falling = SubResource( 9 )
anims/hit = SubResource( 10 )
anims/jump = SubResource( 11 )
anims/walk = SubResource( 12 )

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -2.025

[node name="takeArrow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="gameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.0

[node name="codeBlip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="unlockCode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -8.0

[node name="Konami" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -14.0

[node name="ClearedTimer" type="Timer" parent="."]
wait_time = 1.8
[connection signal="timeout" from="Camera2D/Control/GameTimer" to="Camera2D/Control/GameTimeText" method="_on_GameTimer_timeout"]
[connection signal="timeout" from="ClearedTimer" to="." method="_on_ClearedTimer_timeout"]
